2023-09-05T01:04:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6078962897 # 1146
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 610 969 / 625 989
* notice: next accum: outdated-unq outdated-all / unq all: 610 969 / 625 990
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-09-04]

2023-09-04T08:19:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6070910058 # 1144
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 609 968 / 623 987
* notice: next accum: outdated-unq outdated-all / unq all: 610 969 / 625 989
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-08-21] / [2023-09-04]

2023-09-04T01:06:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6067880427 # 1143
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 609 968 / 623 986
* notice: next accum: outdated-unq outdated-all / unq all: 609 968 / 623 987
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-03]

2023-09-03T08:16:49Z: