@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-05T01:04:23Z",
+  "timestamp" : "2023-09-05T08:19:03Z",
   "count_outdated" : 969,
   "uniques_outdated" : 610,
-  "count" : 990,
-  "uniques" : 625,
+  "count" : 992,
+  "uniques" : 627,
   "clones" : [
     {
       "timestamp": "2023-08-23T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 3,
       "count_minmax": [ 2, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-05T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
