@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 23,
   "uniques": 3,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2023-09-04T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-05T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
