@@ -1,3 +1,12 @@
+2023-09-05T08:19:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6082015978 # 1147
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
+* notice: last 14d: unq all: 3 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 610 969 / 625 990
+* notice: next accum: outdated-unq outdated-all / unq all: 610 969 / 627 992
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-09-05]
+
 2023-09-05T01:04:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6078962897 # 1146
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
